Update responses for the client side rendering